# raycer

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  mapymap.blend
.github/workflows/: deploy.yml
assets/: Map.glb
assets/shaders/: track_material.wgsl
src/: main.rs  splash.rs
src/ai/: mod.rs
src/blaster/: mod.rs
src/car/: mod.rs
src/gym/: mod.rs
src/net/: client.rs  mod.rs  protocol.rs  server.rs  socket.rs
src/physics/: mod.rs
src/telemetry/: mod.rs
src/track/: mod.rs
src/ui/: mod.rs
