[package]
name = "raycer"
version = "0.1.0"
edition = "2024"
description = "Open-source 3D racing game built as an AI gym for reinforcement learning research"
license = "CC0-1.0"

[dependencies]
bevy = "0.17"
bevy_egui = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
rand_chacha = "0.9"

[features]
default = []
web = ["bevy/webgl2"]

# Speed up compilation for development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
