[package]
name = "raycer"
version = "0.1.0"
edition = "2024"
description = "Open-source 3D racing game built as an AI gym for reinforcement learning research"
license = "CC0-1.0"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
bevy_light = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
rand_chacha = "0.9"
avian3d = { version = "0.6", features = ["collider-from-mesh"] }
bevy_camera = "0.18"

[features]
default = []
web = ["bevy/webgl2"]

# Speed up compilation for development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
