[package]
name = "raycer"
version = "0.1.0"
edition = "2024"
description = "Open-source 3D racing game built as an AI gym for reinforcement learning research"
license = "CC0-1.0"

[dependencies]
bevy = { version = "0.18", features = ["mesh_picking"] }
bevy_egui = "0.39"
bevy_light = "0.18"

avian3d = { version = "0.6", features = ["collider-from-mesh"] }
bevy_camera = "0.18"

[features]
default = []
web = ["bevy/webgpu"]
dev = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
